# aiiabox

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  PROJECT_OVERVIEW.md  README.md  dev-up.sh  docker-compose.prod.yml  docker-compose.yml  prod-up.sh  pyproject.toml
aiiabox/: Dockerfile  Dockerfile.prod  requirements.txt  test.sh
aiiabox/apps/api/: __init__.py  admin.py  apps.py  models.py  permissions.py  signals.py  urls.py  views.py
aiiabox/apps/api/tests/: test_auth.py  test_permissions.py
aiiabox/apps/auth/: apps.py  models.py  urls.py
aiiabox/apps/auth/serializers/: __init__.py  auth.py
aiiabox/apps/auth/signals/: __init__.py  auth.py
aiiabox/apps/auth/tests/: __init__.py  auth.py  test_serializers.py  test_signals.py  test_views.py
aiiabox/apps/auth/views/: __init__.py  auth.py
aiiabox/apps/chats/: forms.py  urls.py
aiiabox/apps/chats/admin/: __init__.py  chat.py  message.py
aiiabox/apps/chats/api/: README.md  __init__.py  chat_serializer.py  chat_viewset.py  message_serializer.py  message_viewset.py  permissions.py  serializers.py  urls.py  viewsets.py
aiiabox/apps/chats/forms/: __init__.py  chat.py  message.py
aiiabox/apps/core/: forms.py  urls.py  views.py
aiiabox/apps/permissions/: models.py  urls.py
aiiabox/apps/profiles/: admin.py  models.py  signals.py  urls.py
aiiabox/apps/projects/: models.py
aiiabox/config/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
aiiabox/static/css/: styles.css
nginx/: nginx.conf
tailwind/: package-lock.json  package.json  tailwind.config.js
(+98 files in other folders)
